<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wetasphalt_dark">

    <TextView
        android:id="@+id/textView_dialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/wisteria_dark_accent"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/dialog_custom_title"
        android:textColor="@color/clouds_light"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_Btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextInput"
        android:layout_marginStart="220dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_layout"
        android:text="@string/trip_save"
        android:textColor="@color/clouds_light" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cancel_Btn_dialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back_white"
        android:textColor="@color/clouds_light" />

    <Spinner
        android:id="@+id/dialog_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/clouds_light"
        android:entries="@array/edit_trip_options" />

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/clouds_light"
        android:textColorHint="@color/silver_hint"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/dialogRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/dialogYesRadioButton"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:textColor="@color/clouds_light"
            android:text="@string/trip_yes" />

        <RadioButton
            android:id="@+id/dialogNoRadioButton"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:textColor="@color/clouds_light"
            android:text="@string/trip_no" />
    </RadioGroup>

    <Spinner
        android:id="@+id/dialogInputSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        android:textColor="@color/clouds_light"
        android:entries="@array/transport_options"/>

</RelativeLayout>